# sharp

./: .gitignore  CMakeLists.txt  Line.cpp  Line.h  README.md  main.cpp  sharp.cpp  sharp.h
demo/scalability/: README.md  scalability_test.py
demo/scalability/releaseResults_4/: res_4.txt
demo/scalability/releaseResults_8/: res_8.txt
include/: Line.h  Sharp.h  SharpSupport.h  Sharp_support.h
src/: Line.cpp  Sharp.cpp  SharpSupport.cpp  Sharp_support.cpp  main.cpp
test/: SharpTest.cpp  SharpTest.h
